<resources>
    <string name="app_name">SportMobli</string>
    <string name="welcome">Welcome</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="Sign_In">Sign In</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">sign up</string>
    <string name="Log_In">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Password2">Password</string>
    <string name="homepage">Homepage</string>
    <string name="diet_page">Diet Page</string>
    <string name="training_page">Training Page</string>
    <string name="tracking_page">Tracking Page</string>
    <string name="user_profile_page">User Profile Page</string>
    <string name="home_page">Home page</string>
    <string name="recipes">Recipes</string>
    <string name="drink">drink</string>
    <string name="dinner">dinner</string>
    <string name="lunch">lunch</string>
    <string name="breakfast">breakfast</string>
    <string name="breakfast_title">Breakfast</string>
    <string name="description">description</string>
    <string name="enter_grams">Enter grams</string>
    <string name="add_quantity">Add quantity</string>
    <string name="add_qtt">Add quantity:</string>
    <string name="search">Search</string>
    <string name="calories_0">Calories: 0</string>
    <string name="protein_0">Protein: 0</string>
    <string name="carbs_0">Carbs: 0</string>
    <string name="fats_0">Fats: 0</string>
    <string name="total_grams_0">Total Grams: 0</string>
    <string name="data_100g">data/100g</string>

    <string name="current_heart_rate">HR: 0</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonStart">Start</string>
    <string name="verityId">Id of Verity Sense Device</string>

    <string name="enter_session_name">enter_session_name</string>

</resources>