<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".Signup">

    <EditText
        android:id="@+id/username"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/dt"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/Sign_In"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@drawable/dt"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/checkPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/checkPassword"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="190dp"
        android:autofillHints=""
        android:background="@drawable/dt"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bts"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:circularflow_defaultRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkPassword"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>