<!-- activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="80dp"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="67dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="Welcome" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/bt"
        android:text="@string/log_in"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/bt"
        android:text="@string/sign_in"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
