<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".activity.Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/Log_In"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="283dp"
        android:layout_marginBottom="38dp"
        android:autofillHints=""
        android:background="@drawable/dt2"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:background="@drawable/dt2"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/Password2"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/dt3"
        android:text="@string/log_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>